Cambios e implementaciob bluetooth pruebas

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -15,10 +15,30 @@
     "profile": "Profile"
   },
   "home": {
-    "title": "FESC Trivia",
-    "subtitle": "Spin the wheel and answer questions by category",
+    "title": "Trivia FESC",
+    "subtitle": "Spin the wheel and answer category-based questions",
     "startButton": "Start Game",
     "footer": "Lives: 3 • Good luck!"
+  },
+  "gameMode": {
+    "title": "Select Game Mode",
+    "singlePlayer": "Single Player",
+    "singlePlayerDesc": "Play alone against time",
+    "multiplayer": "Multiplayer",
+    "multiplayerDesc": "Play with a friend via Bluetooth",
+    "host": "Host Game",
+    "hostDesc": "Wait for a player to join",
+    "join": "Join Game",
+    "joinDesc": "Search available games",
+    "waiting": "Waiting for player...",
+    "searching": "Searching for games...",
+    "connected": "Connected with",
+    "connectionFailed": "Connection failed",
+    "disconnect": "Disconnect",
+    "startGame": "Start Game",
+    "player": "Player",
+    "yourTurn": "Your turn",
+    "opponentTurn": "Opponent’s turn"
   },
   "game": {
     "title": "Game",
@@ -30,11 +50,11 @@
     "noMoreQuestions": "No more questions",
     "noMoreQuestionsMessage": "That category has no more questions. Spin again.",
     "correctFeedback": "Correct! +10 points",
-    "incorrectFeedback": "Incorrect. The answer was:",
+    "incorrectFeedback": "Incorrect. The correct answer was:",
     "questionsAnswered": "Questions answered"
   },
   "wheel": {
-    "title": "🎡 Spin the wheel to choose category",
+    "title": "🎡 Spin the wheel to select a category",
     "spin": "🎡 Spin Wheel",
     "spinning": "🌀 Spinning...",
     "result": "🎉 Result!",
@@ -42,12 +62,14 @@
   },
   "gameover": {
     "title": "Game Over!",
-    "finalScore": "Final score",
-    "restart": "Restart"
+    "finalScore": "Final Score",
+    "restart": "Restart",
+    "winner": "Winner!",
+    "draw": "Draw!"
   },
   "leaderboard": {
     "title": "🏆 Top Scores",
-    "subtitle": "Top FESC Trivia players",
+    "subtitle": "Best Trivia FESC Players",
     "empty": "📊 No scores yet",
     "emptySubtitle": "Be the first to play!",
     "points": "pts"
@@ -69,20 +91,20 @@
     "questions": "questions",
     "achievements": "🏅 Achievements",
     "firstVictory": "First Victory",
-    "streak5": "5 Streak",
+    "streak5": "5-Win Streak",
     "perfection": "Perfection",
     "speedster": "Speedster",
-    "profileUpdated": "Profile updated",
+    "profileUpdated": "Profile Updated",
     "profileUpdatedMessage": "Your data has been saved!"
   },
   "settings": {
     "title": "⚙️ Settings",
     "language": "🌐 Language",
-    "spanish": "🇪🇸 Español",
+    "spanish": "🇪🇸 Spanish",
     "english": "🇺🇸 English",
-    "portuguese": "🇧🇷 Português",
-    "languageChanged": "Language changed",
-    "languageChangedMessage": "Language has been changed to",
+    "portuguese": "🇧🇷 Portuguese",
+    "languageChanged": "Language Changed",
+    "languageChangedMessage": "Language changed to",
     "notifications": "🔔 Notifications & Sound",
     "notificationsToggle": "Notifications",
     "sound": "Sound effects",
@@ -90,18 +112,18 @@
     "appearance": "🎨 Appearance",
     "darkMode": "Dark mode",
     "about": "ℹ️ About",
-    "help": "Help & support",
-    "terms": "Terms & conditions",
-    "privacy": "Privacy policy",
+    "help": "Help & Support",
+    "terms": "Terms & Conditions",
+    "privacy": "Privacy Policy",
     "version": "Version",
     "account": "👤 Account",
     "logout": "Log out",
     "logoutConfirm": "Are you sure you want to log out?",
     "logoutSuccess": "Logged out",
     "logoutSuccessMessage": "You have successfully logged out",
-    "deleteAccount": "Delete account",
+    "deleteAccount": "Delete Account",
     "deleteConfirm": "Are you sure? This action cannot be undone.",
-    "accountDeleted": "Account deleted",
+    "accountDeleted": "Account Deleted",
     "accountDeletedMessage": "Your account has been deleted"
   },
   "categories": {
