--- a/i18n/locales/pt.json
+++ b/i18n/locales/pt.json
@@ -10,7 +10,7 @@
     "no": "Não"
   },
   "tabs": {
-    "leaderboard": "Pontuações",
+    "leaderboard": "Ranking",
     "home": "Início",
     "profile": "Perfil"
   },
@@ -20,6 +20,26 @@
     "startButton": "Iniciar Jogo",
     "footer": "Vidas: 3 • Boa sorte!"
   },
+  "gameMode": {
+    "title": "Selecione o Modo de Jogo",
+    "singlePlayer": "Um Jogador",
+    "singlePlayerDesc": "Jogue sozinho contra o tempo",
+    "multiplayer": "Multijogador",
+    "multiplayerDesc": "Jogue com um amigo via Bluetooth",
+    "host": "Criar Partida",
+    "hostDesc": "Aguarde um jogador se conectar",
+    "join": "Entrar na Partida",
+    "joinDesc": "Buscar partidas disponíveis",
+    "waiting": "Aguardando jogador...",
+    "searching": "Buscando partidas...",
+    "connected": "Conectado com",
+    "connectionFailed": "Falha na conexão",
+    "disconnect": "Desconectar",
+    "startGame": "Iniciar Jogo",
+    "player": "Jogador",
+    "yourTurn": "Sua vez",
+    "opponentTurn": "Vez do adversário"
+  },
   "game": {
     "title": "Jogo",
     "lives": "Vidas",
@@ -28,22 +48,24 @@
     "loading": "Carregando pergunta...",
     "spinWheel": "Gire a roleta para escolher uma categoria",
     "noMoreQuestions": "Sem mais perguntas",
-    "noMoreQuestionsMessage": "Essa categoria não tem mais perguntas. Gire novamente.",
+    "noMoreQuestionsMessage": "Esta categoria não tem mais perguntas. Gire novamente.",
     "correctFeedback": "Correto! +10 pontos",
-    "incorrectFeedback": "Incorreto. A resposta era:",
+    "incorrectFeedback": "Incorreto. A resposta correta era:",
     "questionsAnswered": "Perguntas respondidas"
   },
   "wheel": {
-    "title": "🎡 Gire a roleta para escolher categoria",
+    "title": "🎡 Gire a roleta para escolher a categoria",
     "spin": "🎡 Girar Roleta",
     "spinning": "🌀 Girando...",
     "result": "🎉 Resultado!",
     "availableCategories": "Categorias disponíveis:"
   },
   "gameover": {
-    "title": "Jogo terminado!",
-    "finalScore": "Pontuação final",
-    "restart": "Reiniciar"
+    "title": "Fim de Jogo!",
+    "finalScore": "Pontuação Final",
+    "restart": "Reiniciar",
+    "winner": "Vencedor!",
+    "draw": "Empate!"
   },
   "leaderboard": {
     "title": "🏆 Melhores Pontuações",
@@ -57,31 +79,31 @@
     "studentName": "Estudante FESC",
     "personalInfo": "📚 Informações Pessoais",
     "email": "E-mail",
-    "career": "Carreira",
+    "career": "Curso",
     "semester": "Semestre",
     "statistics": "📊 Estatísticas",
-    "gamesPlayed": "Jogos Jogados",
+    "gamesPlayed": "Partidas Jogadas",
     "bestScore": "Melhor Pontuação",
     "totalPoints": "Pontos Totais",
     "average": "Média",
-    "accuracy": "Precisão de Respostas",
+    "accuracy": "Precisão das Respostas",
     "correctAnswers": "corretas de",
     "questions": "perguntas",
     "achievements": "🏅 Conquistas",
     "firstVictory": "Primeira Vitória",
-    "streak5": "Sequência de 5",
+    "streak5": "Sequência de 5 Vitórias",
     "perfection": "Perfeição",
-    "speedster": "Velocista",
-    "profileUpdated": "Perfil atualizado",
+    "speedster": "Veloz",
+    "profileUpdated": "Perfil Atualizado",
     "profileUpdatedMessage": "Seus dados foram salvos!"
   },
   "settings": {
     "title": "⚙️ Configurações",
     "language": "🌐 Idioma",
-    "spanish": "🇪🇸 Español",
-    "english": "🇺🇸 English",
+    "spanish": "🇪🇸 Espanhol",
+    "english": "🇺🇸 Inglês",
     "portuguese": "🇧🇷 Português",
-    "languageChanged": "Idioma alterado",
+    "languageChanged": "Idioma Alterado",
     "languageChangedMessage": "O idioma foi alterado para",
     "notifications": "🔔 Notificações e Som",
     "notificationsToggle": "Notificações",
@@ -90,18 +112,18 @@
     "appearance": "🎨 Aparência",
     "darkMode": "Modo escuro",
     "about": "ℹ️ Sobre",
-    "help": "Ajuda e suporte",
-    "terms": "Termos e condições",
-    "privacy": "Política de privacidade",
+    "help": "Ajuda e Suporte",
+    "terms": "Termos e Condições",
+    "privacy": "Política de Privacidade",
     "version": "Versão",
     "account": "👤 Conta",
     "logout": "Sair",
     "logoutConfirm": "Tem certeza de que deseja sair?",
     "logoutSuccess": "Sessão encerrada",
     "logoutSuccessMessage": "Você saiu com sucesso",
-    "deleteAccount": "Excluir conta",
+    "deleteAccount": "Excluir Conta",
     "deleteConfirm": "Tem certeza? Esta ação não pode ser desfeita.",
-    "accountDeleted": "Conta excluída",
+    "accountDeleted": "Conta Excluída",
     "accountDeletedMessage": "Sua conta foi excluída"
   },
   "categories": {
