--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -14,6 +14,21 @@
     "home": "Home",
     "profile": "Profile"
   },
+  "auth": {
+    "title": "Log in",
+    "email": "Email",
+    "password": "Password",
+    "loginButton": "Sign in",
+    "loading": "Signing in...",
+    "signupTitle": "Create account",
+    "signupButton": "Create account",
+    "signupLoading": "Creating account...",
+    "missingFields": "Please fill in all fields",
+    "signupSuccessTitle": "Account created",
+    "signupSuccessMessage": "Check your email to confirm your account before logging in.",
+    "noAccount": "Don’t have an account? Create one",
+    "haveAccount": "Already have an account? Log in"
+  },
   "home": {
     "title": "Trivia FESC",
     "subtitle": "Spin the wheel and answer category-based questions",
@@ -60,7 +75,7 @@
     "result": "🎉 Result!",
     "availableCategories": "Available categories:"
   },
-    "gameover": {
+  "gameover": {
     "title": "Game Over!",
     "titleSingle": "Game Over!",
     "titleMulti": "Game Over!",
@@ -70,7 +85,6 @@
     "draw": "Draw!",
     "singleWinner": "Player"
   },
-
   "leaderboard": {
     "title": "🏆 Top Scores",
     "subtitle": "Best Trivia FESC Players",
@@ -85,6 +99,7 @@
     "email": "Email",
     "career": "Career",
     "semester": "Semester",
+    "age": "age",
     "statistics": "📊 Statistics",
     "gamesPlayed": "Games Played",
     "bestScore": "Best Score",
